<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- opens a subscreen of settings -->
    <ListPreference
        android:title="Improve Your Speech"/>
    <PreferenceScreen
        android:key="button_voicemail_category_key"
        android:title="@string/settings"
        android:persistent="false">

        <ListPreference
            android:key="PREF_LIST"
            android:title="@string/list_title"
            android:summary="@string/list_summary"
            android:entries="@array/list_entries"
            android:entryValues="@array/list_values"/>
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:defaultValue="true" />

        <PreferenceScreen
            android:key="button_voicemail_setting_key"
            android:title="@string/voicemail_settings"
            android:persistent="false">
        </PreferenceScreen>

    </PreferenceScreen>
</PreferenceScreen>